
        Reviewed by Jon Honeycutt.

        Fix test breakages by adding null checks, and putting inspector code in
        ENABLE(INSPECTOR).

        * dom/Document.cpp:
        (WebCore::Document::finishedParsing):
        * page/DOMWindow.cpp:
        (WebCore::DOMWindow::dispatchLoadEvent):

2009-10-02  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Simon Hausmann.

        Move error check into sendResponseIfNeeded() as suggested
        by Eric Seidel. Also, remove some dead code.

        * platform/network/qt/QNetworkReplyHandler.cpp:
        (WebCore::QNetworkReplyHandler::finish):
        (WebCore::QNetworkReplyHandler::sendResponseIfNeeded):

2009-10-02  Enrica Casucci  <enrica@apple.com>

        Reviewed by Adele Peterson.

        Assertion failure in CompositeEditCommand::moveParagraphs() and crash in Node::nodeIndex() when pasting.
        <rdar://problem/7148712>
        https://bugs.webkit.org/show_bug.cgi?id=28992

        Test: editing/selection/replace-selection-crash.html

        * editing/ReplaceSelectionCommand.cpp:
        (WebCore::ReplaceSelectionCommand::mergeEndIfNeeded): Handle properly the case of
        the destination position matching the end of the paragraph to move.

2009-10-02  Jeremy Orlow  <jorlow@chromium.org>

        Reviewed by Dimitri Glazkov.

        Implement per-storage-area quotas for LocalStorage
        https://bugs.webkit.org/show_bug.cgi?id=29991

        I put 90% of the code in StorageMap since the decision to allow an update is
        closely tied to quota tracking.  The quota is set via a page's Settings class.
        Like with the local storage path and whether it's enabled, it's assumed that
        all pages in the same group will have the same settings.  The setting defaults
        to 5mb which is what the spec suggests, but it can easily be changed to
        anything else--including StorageMap::noQuota.  Any values in LocalStorage are